--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,3 +1,3 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="xyz.justsoft.video_thumb_getter">
+  package="xyz.justsoft.video_thumbnail">
 </manifest>
